--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
+  "scripts": {
+    "build": "rm -rf dist && parcel build src/index.html --no-minify --public-url ./"
+  },
   "name": "mvc-demo1",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
     "jquery": "^3.6.0"
-  }
+  },
+  "repository": "git@github.com:FengYongLi/mvc-demo1.git",
+  "author": "LiYongFeng <506076395@qq.com>"
 }
