--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "scripts": {
     "build": "rm -rf dist && parcel build src/index.html --no-minify --public-url ./"
   },
-  "name": "mvc-demo1",
+  "name": "mvc-demo2",
   "version": "1.0.0",
   "main": "index.js",
+  "repository": "git@github.com:FengYongLi/mvc-demo1.git",
+  "author": "LiYongFeng <506076395@qq.com>",
   "license": "MIT",
   "dependencies": {
     "jquery": "^3.6.0"
-  },
-  "repository": "git@github.com:FengYongLi/mvc-demo1.git",
-  "author": "LiYongFeng <506076395@qq.com>"
+  }
 }
